--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GREENSHOP</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -32,7 +32,9 @@
     <section class="content-section">
       <div class="text-part">
         <h5 class="text1">WELCOME TO GREENSHOP</h5>
-        <h1 class="text2">Let’s Make a Better Planet</h1>
+        <h1 class="text2">
+          Let’s Make a Better <span class="wordcolorgreen">Planet</span>
+        </h1>
         <p class="text3">
           We are an online plant shop offering a wide range of cheap and trendy
           plants. Use our plants to create an unique Urban Jungle. Order your
